PyMaker/datas/object2/RawHTML/i2801/Python_DOC_referPages.syntaxerror-invalid-syntax-when-running-python-code-from-shell.txt
<div class="post-text" itemprop="text">
<p>In Jupyter Notebook my Code runs fine, but when I run it from shell i get a syntax error at this part of my code:</p>
<pre><code>res = f'"x"'+" "+f'"y"'+" "+f'"t"'+" "+f'"id"'+" "+f'"id2"'
           ^
SyntaxError: invalid syntax
</code></pre>
<p>However I need the String <code>res</code> to look like: </p>
<pre><code>""x" "y" "t" "id" "id2""
</code></pre>
<p>I guess that the way i create it is causing the error. </p>
<p>Is there any other way to create a String containing quotation marks?
Or anything to get rid of the syntax error?
Thanks!</p>
</div>
<div class="post-text" itemprop="text">
<p>f-strings, or <a href="https://docs.python.org/3/reference/lexical_analysis.html#f-strings" rel="nofollow noreferrer">formatted string literals</a> is supported only from python 3.6. If you are using old version of python, try to upgrade. If you have both python2 and python3 installed, make sure you are launching python3 </p>
<p>But for the output you expect, you dont need f-strings</p>
<pre><code>res = '"x" "y" "t" "id" "id2"'
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Got the answer now:</p>
<pre><code>res= "\"x\" \"y\" \"t\" \"id\" \"id2\""
</code></pre>
<p>works for Shell as well as Python</p>
</div>
<span class="comment-copy">Your expected output is not valid syntax. Did you mean <code>a= '"x" "y" "t" "id" "id2"'</code>?</span>
<span class="comment-copy">Looks like left open parentheses in the line(s) before.</span>
<span class="comment-copy">@roganjosh yes i want a to look as you said</span>
<span class="comment-copy">@KlausD. no that is not the problem. The code runs fine in Jupyter notebook. It is just not valid shell syntax i guess, but i don't know how to get the same String with shell commands</span>
<span class="comment-copy">What version of Python?</span>
